Fixed Prism white-space setting to prevent automatic horizontal scrollbars

--- a/Templates/_common/_doc_files/prism.css
+++ b/Templates/_common/_doc_files/prism.css
@@ -13,7 +13,8 @@ pre[class*="language-"] {
   font-size: 1em;
   text-align: left;
   text-shadow: 0 -0.1em 0.2em black;
-  white-space: pre;
+  white-space: pre-wrap;
+  /*white-space: normal;*/
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
